[gd_scene load_steps=29 format=3 uid="uid://d1pi1kgma618d"]

[ext_resource type="Script" uid="uid://cxisi2yblv1ug" path="res://core/gui/gui.gd" id="1_ds54n"]
[ext_resource type="Shader" uid="uid://c73v4e4ck57ri" path="res://assets/shaders/blur.gdshader" id="1_iooxw"]
[ext_resource type="Script" uid="uid://bj6cggpoj06fc" path="res://scripts/gui/player_health_bar.gd" id="3_6a04i"]
[ext_resource type="Texture2D" uid="uid://d3qkcqfn275w3" path="res://assets/textures/GUI/PlayerHealthGui.png" id="4_hut4s"]
[ext_resource type="PackedScene" uid="uid://cy6ic2npxa53k" path="res://scenes/gui/heart_icon.tscn" id="5_5kxef"]
[ext_resource type="Script" uid="uid://dwtkbxk8j02vb" path="res://scripts/gui/enemy_count.gd" id="5_hut4s"]
[ext_resource type="PackedScene" uid="uid://c2eyb87rkl1af" path="res://scenes/gui/inventory/inventory.tscn" id="5_mwy2m"]
[ext_resource type="Script" uid="uid://cm28u05ny6twb" path="res://scripts/gui/boss_health_bar.gd" id="6_a22y1"]
[ext_resource type="PackedScene" uid="uid://cd7ku1ntwth6u" path="res://scenes/gui/health_progress_bar.tscn" id="6_ce05j"]
[ext_resource type="FontFile" uid="uid://dvbi1cshtkqcb" path="res://assets/fonts/ChailceNogginRegular.ttf" id="7_a22y1"]
[ext_resource type="PackedScene" uid="uid://bd7dpdh8afywi" path="res://scenes/gui/common/menu_nav_button.tscn" id="7_ube1n"]
[ext_resource type="Texture2D" uid="uid://cjfuekpjxk3x1" path="res://assets/textures/GUI/MiniMapBorder.png" id="8_4jwg1"]
[ext_resource type="Texture2D" uid="uid://b26mq80nysnge" path="res://assets/textures/GUI/simple_skull_icon.png" id="8_hut4s"]
[ext_resource type="PackedScene" uid="uid://bgdg5y0ec727w" path="res://scenes/gui/settings_menu/settings_menu.tscn" id="8_xu1a1"]
[ext_resource type="PackedScene" uid="uid://trdgk7ggai0g" path="res://scenes/debug/debug_console.tscn" id="9_7vfty"]
[ext_resource type="Texture2D" uid="uid://dcatqanxxieh6" path="res://assets/textures/GUI/Open_Book.png" id="12_p8m64"]
[ext_resource type="Script" uid="uid://dwh6mufbn3who" path="res://scripts/gui/game_over_screen.gd" id="12_xwonv"]

[sub_resource type="LabelSettings" id="LabelSettings_hut4s"]
line_spacing = 15.0
font = ExtResource("7_a22y1")
font_size = 18
font_color = Color(0.479792, 1, 0.570656, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a22y1"]
line_spacing = 15.0
font = ExtResource("7_a22y1")
font_size = 14
font_color = Color(0.52, 0.888, 1, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4jwg1"]
font = ExtResource("7_a22y1")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xwonv"]
line_spacing = 20.0
font = ExtResource("7_a22y1")
font_size = 70
font_color = Color(0.717821, 0.113768, 0.172568, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p8m64"]
line_spacing = 20.0
font = ExtResource("7_a22y1")
font_size = 70
font_color = Color(0.478431, 1, 0.568627, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jvx8h"]
line_spacing = 20.0
font = ExtResource("7_a22y1")
font_size = 36
font_color = Color(0, 0, 0, 0.635294)

[sub_resource type="Animation" id="Animation_xwonv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jvx8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thhsl"]
_data = {
&"RESET": SubResource("Animation_jvx8h"),
&"fade_in": SubResource("Animation_xwonv")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t76s2"]
shader = ExtResource("1_iooxw")
shader_parameter/lod = 0.9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a22y1"]
bg_color = Color(0, 0, 0, 0.207843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="GUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ds54n")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="PlayerInfo" type="Control" parent="HUD"]
anchors_preset = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 536.0
offset_bottom = 228.0

[node name="PlayerHealthbar" type="HBoxContainer" parent="HUD/PlayerInfo" node_paths=PackedStringArray("images_container")]
layout_mode = 0
offset_left = 130.0
offset_top = 70.0
offset_right = 563.0
offset_bottom = 134.0
script = ExtResource("3_6a04i")
images_container = NodePath(".")
single_health_icon = ExtResource("5_5kxef")

[node name="Heart1" parent="HUD/PlayerInfo/PlayerHealthbar" instance=ExtResource("5_5kxef")]
layout_mode = 2

[node name="Heart2" parent="HUD/PlayerInfo/PlayerHealthbar" instance=ExtResource("5_5kxef")]
layout_mode = 2

[node name="Heart3" parent="HUD/PlayerInfo/PlayerHealthbar" instance=ExtResource("5_5kxef")]
layout_mode = 2

[node name="Control" type="ColorRect" parent="HUD/PlayerInfo"]
clip_children = 1
layout_mode = 0
offset_left = -16.0
offset_top = -15.0
offset_right = 132.0
offset_bottom = 200.0

[node name="PlayerIcon" type="TextureRect" parent="HUD/PlayerInfo/Control"]
texture_filter = 6
layout_mode = 0
offset_top = -2.0
offset_right = 214.0
offset_bottom = 215.0
texture = ExtResource("4_hut4s")
expand_mode = 1
stretch_mode = 5

[node name="ObjectiveInfo" type="VBoxContainer" parent="HUD" node_paths=PackedStringArray("main_objective_label", "room_objective_label")]
layout_mode = 0
offset_left = 20.0
offset_top = 226.0
offset_right = 414.0
offset_bottom = 486.0
theme_override_constants/separation = 30
script = ExtResource("5_hut4s")
main_objective_label = NodePath("MainObjective")
room_objective_label = NodePath("RoomObjective")

[node name="MainObjective" type="Label" parent="HUD/ObjectiveInfo"]
layout_mode = 2
text = "MAIN OBJECTIVE
- Enter the huanted library"
label_settings = SubResource("LabelSettings_hut4s")
vertical_alignment = 1

[node name="RoomObjective" type="Label" parent="HUD/ObjectiveInfo"]
layout_mode = 2
text = "ROOM OBJECTIVE
- Defeat enemies  0 / 0
"
label_settings = SubResource("LabelSettings_a22y1")
vertical_alignment = 1

[node name="Inventory" parent="." instance=ExtResource("5_mwy2m")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Minimap" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -368.0
offset_right = -35.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="BackgroundTexture" type="TextureRect" parent="Minimap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -39.0
offset_right = 20.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_4jwg1")
expand_mode = 1
stretch_mode = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="Minimap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 22.0
offset_right = -22.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Minimap/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(289, 289)
render_target_update_mode = 4

[node name="BossHealth" type="Control" parent="." node_paths=PackedStringArray("progress_bar", "boss_name_label")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -86.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_a22y1")
progress_bar = NodePath("HealthProgressBar")
boss_name_label = NodePath("HealthProgressBar/Label")
main_color = Color(0.47451, 0, 0, 1)
disabled_color = Color(0.24, 0.16608, 0.1608, 1)

[node name="HealthProgressBar" parent="BossHealth" instance=ExtResource("6_ce05j")]
layout_mode = 1
offset_left = -266.0
offset_top = -18.5
offset_right = 266.0
offset_bottom = 18.5

[node name="Label" type="Label" parent="BossHealth/HealthProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -18.5
offset_right = 81.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "BOSS NAME "
label_settings = SubResource("LabelSettings_4jwg1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BossHealth"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -22.0
offset_right = -273.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_hut4s")
expand_mode = 1
stretch_mode = 4

[node name="GameOver" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_xwonv")

[node name="Background" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="Book" type="TextureRect" parent="GameOver"]
texture_filter = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_p8m64")
expand_mode = 1
stretch_mode = 5

[node name="DefeatMessage" type="Label" parent="GameOver/Book"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -526.0
offset_top = -330.0
offset_right = -15.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "YOUR STORY HAS ENDED IN DEFEAT"
label_settings = SubResource("LabelSettings_xwonv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VictoryMessage" type="Label" parent="GameOver/Book"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -524.0
offset_top = -331.0
offset_right = -16.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "YOUR STORY HAS ENDED IN TRIUMPH"
label_settings = SubResource("LabelSettings_p8m64")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ResultsLabel" type="Label" parent="GameOver/Book"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -296.0
offset_right = 505.0
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Results:
kills - 0
time - 00:00:00
damage taken - 0
rooms explored - 0"
label_settings = SubResource("LabelSettings_jvx8h")
autowrap_mode = 2

[node name="NavButtons" type="HBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -168.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="RetryButton" parent="GameOver/NavButtons" instance=ExtResource("7_ube1n")]
layout_mode = 2
text = "Retry"

[node name="QuitButton" parent="GameOver/NavButtons" instance=ExtResource("7_ube1n")]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
libraries = {
&"": SubResource("AnimationLibrary_thhsl")
}

[node name="Pause" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Pause"]
material = SubResource("ShaderMaterial_t76s2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -168.0
offset_right = 247.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a22y1")

[node name="MarginContainer" type="MarginContainer" parent="Pause/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Button_RESUME" parent="Pause/Panel/MarginContainer/VBoxContainer" instance=ExtResource("7_ube1n")]
layout_mode = 2
text = "RESUME"

[node name="ButtonSounds" parent="Pause/Panel/MarginContainer/VBoxContainer/Button_RESUME" index="0"]
pressed_sound = "return_to_game"

[node name="Button_SETTINGS" parent="Pause/Panel/MarginContainer/VBoxContainer" instance=ExtResource("7_ube1n")]
layout_mode = 2
text = "SETTINGS"

[node name="Button_QUIT" parent="Pause/Panel/MarginContainer/VBoxContainer" instance=ExtResource("7_ube1n")]
layout_mode = 2
text = "QUIT TO MAIN MENU"

[node name="SettingsMenu" parent="." instance=ExtResource("8_xu1a1")]
visible = false
layout_mode = 1

[node name="DebugConsole" parent="." instance=ExtResource("9_7vfty")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Pause/Panel/MarginContainer/VBoxContainer/Button_RESUME" to="." method="resume_pressed"]
[connection signal="pressed" from="Pause/Panel/MarginContainer/VBoxContainer/Button_SETTINGS" to="." method="on_button_settings_pressed"]
[connection signal="pressed" from="Pause/Panel/MarginContainer/VBoxContainer/Button_QUIT" to="." method="quit_pressed"]
[connection signal="ok_pressed" from="SettingsMenu" to="." method="on_settings_menu_ok_pressed"]

[editable path="Pause/Panel/MarginContainer/VBoxContainer/Button_RESUME"]
[editable path="DebugConsole"]
